<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.tarek.singlescreenapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!-- photo representing the business -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/logo"
            />

        <!-- phone number -->
        <TextView
            style="@style/labelsStyle"
            android:text="@string/phone_number_label"
            />
        <TextView
            style="@style/textStyle"
            android:text="@string/phone_number"
            />

        <!-- email address -->
        <TextView
            style="@style/labelsStyle"
            android:text="@string/email_address_label"
            />
        <TextView
            style="@style/textStyle"
            android:text="@string/email_address"
            />


        <!-- Address of the Business -->
        <TextView
            style="@style/labelsStyle"
            android:text="@string/address_label"
            />

        <TextView
            style="@style/textStyle"
            android:text="@string/address"
            />

        <!-- Description -->
        <TextView
            style="@style/labelsStyle"
            android:text="@string/description_label"
            />

        <TextView
            style="@style/textStyle"
            android:text="@string/description"
            />

        <!-- Hours of operation -->
        <TextView
            style="@style/labelsStyle"
            android:text="@string/hours_of_operation_label"
            />
        <TextView
            style="@style/textStyle"
            android:text="@string/hours_of_operation"
            />
    </LinearLayout>



</ScrollView>
